--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
     "should": "8.2.1"
   },
   "dependencies": {
-    "debug": "2.2.0"
+    "concat-stream": "1.5.1",
+    "debug": "2.2.0",
+    "iconv-lite": "0.4.13",
+    "once": "1.3.3",
+    "parse-attributes": "0.0.1",
+    "sax": "1.1.5"
   }
 }
