--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "babel src --out-dir lib --ignore node_modules",
     "lint": "eslint src test",
     "test": "mocha",
-    "prepublish": "npm-run-all lint clean build"
+    "prepublishOnly": "npm-run-all lint clean build"
   },
   "keywords": [
     "xml",
@@ -28,25 +28,29 @@
   },
   "homepage": "https://github.com/bjrmatos/read-xml",
   "devDependencies": {
-    "babel-cli": "6.5.1",
-    "babel-core": "6.5.1",
-    "babel-plugin-add-module-exports": "0.1.2",
-    "babel-preset-es2015": "6.5.0",
-    "babel-preset-stage-0": "6.5.0",
-    "eslint": "1.10.3",
-    "eslint-config-airbnb": "5.0.0",
-    "eslint-plugin-node": "0.6.2",
-    "mocha": "2.4.5",
-    "npm-run-all": "1.5.1",
-    "rimraf": "2.5.1",
-    "should": "8.2.1"
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-plugin-add-module-exports": "0.2.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-plugin-import": "2.10.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-node": "6.0.1",
+    "eslint-plugin-react": "7.7.0",
+    "expect.js": "0.3.1",
+    "mocha": "5.0.5",
+    "npm-run-all": "4.1.2",
+    "rimraf": "2.6.2",
+    "should": "13.2.1"
   },
   "dependencies": {
-    "concat-stream": "1.5.1",
-    "debug": "2.2.0",
-    "iconv-lite": "0.4.13",
-    "once": "1.3.3",
+    "concat-stream": "1.6.2",
+    "debug": "3.1.0",
+    "iconv-lite": "0.4.21",
+    "once": "1.4.0",
     "parse-attributes": "0.0.1",
-    "sax": "1.1.5"
+    "sax": "1.2.4"
   }
 }
